<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/size16"
    tools:context="com.landsoft.contactphonenumber.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        android:layout_marginBottom="@dimen/size16"
        android:id="@+id/edt_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_phone_number"
        android:layout_marginBottom="@dimen/size16"
        android:id="@+id/edt_phone"
        android:inputType="phone"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gener"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/size16"
        >
        <RadioButton
            android:checked="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_weight="1"
            android:id="@+id/rbtn_male"
            />
        <RadioButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/rbtn_female"
            />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add"
        android:layout_marginBottom="@dimen/size16"
        android:id="@+id/btn_add"
        android:background="@color/colorPrimaryDark"
        />
   <ListView
       android:id="@+id/lv_contact"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >

   </ListView>
</LinearLayout>
